--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,8 @@
 						<input id="username" name="username"  class="form-control" placeholder="usuário" autofocus="autofocus">
 					</div>
 
+					<!-- <script> window.stop(); </script> -->
+
 					<div class="form-group">
 						<label for="password">Senha</label>
 						<input id="password" type="password" name="password" class="form-control" placeholder="senha">
